--- a/portfolio.html
+++ b/portfolio.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
-<html lang="ua">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width= , initial-scale=1.0" />
     <title>Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
     <header>
       <nav>
-        <a lang="en" href="./index.html">Web<span>Studio</span></a>
+        <a class="logo link" lang="en" href="./index.html"><span class="logo-web">Web</span>Studio</a>
 
         <ul class="site-nav list">
           <li class="list"><a class="link" href="./index.html">Студія</a></li>
@@ -20,86 +23,84 @@
         </ul>
       </nav>
 
-      <ul>
-        <li class="list link"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li class="list"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="contacts">
+        <li class="list"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li class="list"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
 
     <main>
-      <h1 hidden>Наші роботи</h1>
-      <ul>
-        <li><button type="button" class="button">Усі</button></li>
-        <li><button type="button" class="button">Веб-сайти</button></li>
-        <li><button type="button" class="button">Додатки</button></li>
-        <li><button type="button" class="button">Дизайн</button></li>
-        <li><button type="button" class="button">Маркетинг</button></li>
+      <h1 class="visually-hidden">Наші проєкти</h1>
+      <ul class="filter list">
+        <li><button type="button" class="filter-button">Усі</button></li>
+        <li><button type="button" class="filter-button">Веб-сайти</button></li>
+        <li><button type="button" class="filter-button">Додатки</button></li>
+        <li><button type="button" class="filter-button">Дизайн</button></li>
+        <li><button type="button" class="filter-button">Маркетинг</button></li>
       </ul>
+
       <ul class="product-list list">
         <li>
-          <a href=""
-            ><img src="./images/tecno.jpg" alt="Веб-сайт" width="370" />
-            <h3 class="title">Технокряк</h3>
-            <p class="description">Веб-сайт</p></a
-          >
+          <img src="./images/tecno.jpg" alt="Веб-сайт" width="370" />
+          <h3 class="project-name">Технокряк</h3>
+          <p class="project-description">Веб-сайт</p>
         </li>
         <li>
-          <a href=""
-            ><img src="./images/bascketball.jpg" alt="Банер" width="370" />
-            <h3 class="title">Постер New Orlean vs Golden Star</h3>
-            <p class="description">Дизайн</p></a
-          >
+          <img src="./images/bascketball.jpg" alt="Банер" width="370" />
+          <h3 class="project-name">Постер New Orlean vs Golden Star</h3>
+          <p class="project-description">Дизайн</p>
         </li>
         <li>
-          <a href=""
-            ><img src="./images/seafood.jpg" alt="Додаток" width="370" />
-            <h3 class="title">Ресторан Seafood</h3>
-            <p class="description">Додаток</p></a
-          >
+          <img src="./images/seafood.jpg" alt="Додаток" width="370" />
+          <h3 class="project-name">Ресторан Seafood</h3>
+          <p class="project-description">Додаток</p>
         </li>
         <li>
-          <a href=""
-            ><img src="./images/headphones.jpg" alt="Маркетинг" width="370" />
-            <h3 class="title">Проєкт Prime</h3>
-            <p class="description">Маркетинг</p></a
-          >
+          <img src="./images/headphones.jpg" alt="Маркетинг" width="370" />
+          <h3 class="project-name">Проєкт Prime</h3>
+          <p class="project-description">Маркетинг</p>
         </li>
         <li>
-          <a href=""
-            ><img src="./images/boxes.jpg" alt="Додаток" width="370" />
-            <h3 class="title">Проєкт Boxes</h3>
-            <p class="description">Додаток</p></a
-          >
+          <img src="./images/boxes.jpg" alt="Додаток" width="370" />
+          <h3 class="title">Проєкт Boxes</h3>
+          <p class="description">Додаток</p>
         </li>
         <li>
-          <a href=""
-            ><img src="./images/monitor.jpg" alt="Веб-сайт" width="370" />
-            <h3 class="title">Inspiration has no Borders</h3>
-            <p class="description">Веб-сайт</p></a
-          >
+          <img src="./images/monitor.jpg" alt="Веб-сайт" width="370" />
+          <h3 class="title">Inspiration has no Borders</h3>
+          <p class="description">Веб-сайт</p>
         </li>
         <li>
-          <a href=""
-            ><img src="./images/book.jpg" alt="Дизайн" width="370" />
-            <h3 class="title">Видання Limited Edition</h3>
-            <p class="description">Дизайн</p></a
-          >
+          <img src="./images/book.jpg" alt="Дизайн" width="370" />
+          <h3 class="title">Видання Limited Edition</h3>
+          <p class="description">Дизайн</p>
         </li>
         <li>
-          <a href=""
-            ><img src="./images/label.jpg" alt="Маркетинг" width="370" />
-            <h3 class="title">Проєкт LAB</h3>
-            <p class="description">Маркетинг</p></a
-          >
+          <img src="./images/label.jpg" alt="Маркетинг" width="370" />
+          <h3 class="title">Проєкт LAB</h3>
+          <p class="description">Маркетинг</p>
         </li>
         <li>
-          <a href=""
-            ><img src="./images/laptop.jpg" alt="Додаток" width="370" />
-            <h3 class="title">Growing Business</h3>
-            <p class="description">Додаток</p></a
-          >
+          <img src="./images/laptop.jpg" alt="Додаток" width="370" />
+          <h3 class="title">Growing Business</h3>
+          <p class="description">Додаток</p>
         </li>
       </ul>
     </main>
+
+    <footer class="footer">
+      <a class="logo link" lang="en" href="./index.html"><span class="logo-web">Web</span>Studio</a>
+      <address>
+        <ul class="contacts">
+          <li class="list">
+            <a class="map link" href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noreferrer noopener nofollow">
+              м. Київ, пр-т Лесі Українки, 26
+            </a>
+          </li>
+          <li class="list"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li class="list"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+      </address>
+    </footer>
   </body>
 </html>
