--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </section>
 
       <section class="abot">
-        <h2 class="about-title">Чим ми займаємося</h2>
+        <h2 class="section-title">Чим ми займаємося</h2>
         <ul>
           <li class="list">
             <img src="images/box-1.jpg" alt="розробка сайтів" width="370" />
@@ -73,7 +73,7 @@
       </section>
 
       <section class="team">
-        <h2 class="team-title">Наша команда</h2>
+        <h2 class="section-title">Наша команда</h2>
         <ul>
           <li class="list background">
             <img src="images/Igor-Demyanenko.jpg" alt="Ігор Дем'яненко" width="270" />
@@ -101,10 +101,11 @@
 
     <footer class="footer">
       <a class="logo link" lang="en" href="./index.html"><span class="logo-web">Web</span>Studio</a>
+
       <address>
-        <ul class="contacts">
+        <ul class="adress list">
           <li class="list">
-            <a class="map link" href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noreferrer noopener nofollow">
+            <a class="map" href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noreferrer noopener nofollow">
               м. Київ, пр-т Лесі Українки, 26
             </a>
           </li>
