--- a/portfolio.html
+++ b/portfolio.html
@@ -88,12 +88,13 @@
       </ul>
     </main>
 
-    <footer class="footer">
+     <footer class="footer">
       <a class="logo link" lang="en" href="./index.html"><span class="logo-web">Web</span>Studio</a>
+
       <address>
-        <ul class="contacts">
+        <ul class="adress list">
           <li class="list">
-            <a class="map link" href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noreferrer noopener nofollow">
+            <a class="map" href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noreferrer noopener nofollow">
               м. Київ, пр-т Лесі Українки, 26
             </a>
           </li>
