letter-spacing, footer

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     </main>
 
     <footer class="footer">
-      <a class="logo link" lang="en" href="./index.html"><span class="logo-web">Web</span>Studio</a>
+      <a class="logo" lang="en" href="./index.html"><span class="logo-web">Web</span>Studio</a>
 
       <address>
         <ul class="adress list">
